<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchOnline">

    <EditText
        android:id="@+id/search_online"

        style="@style/searchword"
        android:layout_marginStart="28dp"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:hint="@string/search_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_search_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="online"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/search_online"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_online"
        app:layout_constraintTop_toTopOf="@+id/search_online" />

    <TextView
        android:id="@+id/online_content"

        style="@style/content"
        android:layout_marginTop="144dp"
        android:background="@drawable/text_radioborder"
        android:gravity="center"
        android:text="@string/blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_online" />

    <Button
        android:id="@+id/online_add_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:onClick="online_add_word"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/online_content"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/online_content"
        app:layout_constraintTop_toBottomOf="@+id/online_content" />


</androidx.constraintlayout.widget.ConstraintLayout>