<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        tools:layout_editor_absoluteX="198dp" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/page_remeber"
            style="@style/lead"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="to_page_rember"
            android:text="@string/remeber" />

        <TextView
            android:id="@+id/page_wordlist"
            style="@style/lead"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="to_page_wordlist"
            android:text="@string/myword" />

        <TextView
            android:id="@+id/page_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="to_page_search"

            android:text="@string/search_word" />

        <TextView
            android:id="@+id/page_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="to_page_add"
            android:text="@string/addword" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>