<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWord">

    <EditText
        android:id="@+id/add_word"
        android:text="@string/word"
        android:background="@drawable/text_radioborder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/input_word"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.285" />

    <EditText
        android:id="@+id/add_content"

        android:gravity="center"
        android:text="@string/content"
        android:background="@drawable/text_radioborder"
        style="@style/input_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_word"
        app:layout_constraintVertical_bias="0.149" />

    <Button
        android:id="@+id/btn_add_word"
        android:layout_width="131dp"
        android:layout_height="66dp"
        android:text="@string/add"
        android:onClick="add_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_content"
        app:layout_constraintVertical_bias="0.318" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            tools:layout_editor_absoluteX="198dp" />
        <include layout="@layout/lead"></include>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>