<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchWord">

    <EditText
        android:id="@+id/search_input_word"

        style="@style/input_word"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:hint="@string/search_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="112dp"
        android:layout_height="41dp"
        android:onClick="search"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/search_input_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_input_word"
        app:layout_constraintTop_toTopOf="@+id/search_input_word" />

    <TextView
        android:id="@+id/search_show_content"
        style="@style/content"
        android:layout_marginBottom="160dp"
        android:gravity="center"
        android:text="@string/blank"
        app:layout_constraintBottom_toTopOf="@+id/search_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/local_to_add"
        android:layout_width="119dp"
        android:layout_height="63dp"
        android:layout_marginBottom="20dp"
        android:onClick="page_to_addword"
        android:text="自己添加"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/search_line"
        app:layout_constraintEnd_toStartOf="@+id/local_to_searchonline"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/local_to_searchonline"
        android:layout_width="114dp"
        android:layout_height="64dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:onClick="page_to_searchonline"

        android:text="在线搜索"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/search_line"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/search_line"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="bottom"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:text="TextView"

            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            tools:layout_editor_absoluteX="198dp" />

        <include layout="@layout/lead"></include>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>